Better test coverage for PackageTest