@@ -43,6 +43,7 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -440,23 +441,13 @@ public final class PackageTest extends RunnablePackageTest {
     }
 
     private List<Consumer<Action>> createPackageTypeHandlers() {
-        return NATIVE.stream()
-                .map(type -> {
-                    Handler handler = handlers.entrySet().stream()
-                        .filter(entry -> !entry.getValue().isVoid())
-                        .filter(entry -> entry.getKey() == type)
-                        .map(entry -> entry.getValue())
-                        .findAny().orElse(null);
-                    Map.Entry<PackageType, Handler> result = null;
-                    if (handler != null) {
-                        result = Map.entry(type, handler);
-                    }
-                    return result;
-                })
-                .filter(Objects::nonNull)
-                .map(entry -> createPackageTypeHandler(
-                        entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
+        return handlers.entrySet().stream()
+                .filter(entry -> !entry.getValue().isVoid())
+                .filter(entry -> NATIVE.contains(entry.getKey()))
+                .sorted(Comparator.comparing(Map.Entry::getKey))
+                .map(entry -> {
+                    return  createPackageTypeHandler(entry.getKey(), entry.getValue());
+                }).toList();
     }
 
     private Consumer<Action> createPackageTypeHandler(
@@ -469,13 +460,8 @@ public final class PackageTest extends RunnablePackageTest {
                 }
 
                 if (action == Action.FINALIZE) {
-                    if (unpackDir != null) {
-                        if (Files.isDirectory(unpackDir)
-                                && !unpackDir.startsWith(TKit.workDir())) {
-                            TKit.deleteDirectoryRecursive(unpackDir);
-                        }
-                        unpackDir = null;
-                    }
+                    deleteUnpackDirs.forEach(TKit::deleteDirectoryRecursive);
+                    deleteUnpackDirs.clear();
                     terminated = true;
                 }
 
@@ -513,7 +499,10 @@ public final class PackageTest extends RunnablePackageTest {
                             unhandledAction = null;
                             final var unpackRootDir = TKit.createTempDirectory(
                                     String.format("unpacked-%s", type.getName()));
-                            unpackDir = pkgHandler.unpack(cmd, unpackRootDir);
+                            final Path unpackDir = pkgHandler.unpack(cmd, unpackRootDir);
+                            if (!unpackDir.startsWith(TKit.workDir())) {
+                                deleteUnpackDirs.add(unpackDir);
+                            }
                             cmd.setUnpackedPackageLocation(unpackDir);
                         }
                         break;
@@ -569,7 +558,7 @@ public final class PackageTest extends RunnablePackageTest {
                 });
             }
 
-            private Path unpackDir;
+            private final List<Path> deleteUnpackDirs = new ArrayList<>();
             private Action unhandledAction;
             private boolean terminated;
             private final JPackageCommand cmd = Functional.identity(() -> {
@@ -649,12 +638,9 @@ public final class PackageTest extends RunnablePackageTest {
                     break;
 
                 case PURGE:
-                    if (expectedJPackageExitCode == 0) {
-                        var bundle = cmd.outputBundle();
-                        if (toSupplier(() -> TKit.deleteIfExists(bundle)).get()) {
-                            TKit.trace(String.format("Deleted [%s] package",
-                                    bundle));
-                        }
+                    var bundle = cmd.outputBundle();
+                    if (toSupplier(() -> TKit.deleteIfExists(bundle)).get()) {
+                        TKit.trace(String.format("Deleted [%s] package", bundle));
                     }
                     break;
 
